--- a/index.html
+++ b/index.html
@@ -124,14 +124,18 @@
         </div>
         <div id="termin" class="content">
             <h2>Was erwartet mich genau?</h2>
-            <p>Wir haben 2 professionelle Trainer, einer von ihnen wird dir das Board erklären und dann eine erste Runde mit dir fahren.</p>
-            <p>Platzhalter Platzhalter Platzhalter Platzhalter Platzhalter Platzhalter Platzhalter Platzhalter</p>
-            <h2>Wo muss ich hin?</h2> <a href="https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9" target="_blank" class="button">Standort anzeigen</a>
-            <h2>Was muss ich mitbringen?</h2>
-            <ul>
-                <li>Platzhalter Platzhalter Platzhalter</li>
-                <li>Platzhalter Platzhalter Platzhalter</li>
-                <li>Platzhalter Platzhalter Platzhalter</li>
-                <li>Platzhalter Platzhalter Platzhalter</li>        </div>
+            <p></p>
+            <p>Du kommst einfach zum vereinbarten Zeitpunkt zu unserem Treffpunkt am Main (Die Bootslipstelle zwischen Grafenrheinfeld und Bergrheinfeld https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9)</p>
+            <p>Unsere Coaches zeigen dir hier erstmal per Trockenübungen an Land, wie du mit dem eFoil umgehst.  
+			Danach gibts noch ein bisschen Theorie, z.B wo du auf dem Main fahren darfst und wo nicht, was es bei Bootsverkehr zu beachten gibt, etc.  
+			Anschließend darfst du dann selbst ins Wasser – unsere Coaches geben dir natürlich weitere Tipps und begleiten dich mit dem Sportboot. Auf dem Wasser bist du dann so lange bis sich der Boardakku dem Ende neigt (je nach Fahrergewicht und Talent 45-60 Minuten). 
+ Time Cap: ½ Stunde Theorie und 1 Stunde fahren <p>
+			<h2>Wo muss ich hin?</h2> <a href="https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9" target="_blank" class="button">Standort anzeigen</a>
+			<h2>Was muss ich mitbringen?</h2>
+			<p>- Badeklamotten </p>
+			<p>- Handtuch </p>
+			<p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürliche einen für dich) </p>
+			<p>- Gute Laune :) </p>
+        </div>
     </body>
 </html>
