--- a/index.html
+++ b/index.html
@@ -1,141 +1,174 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="Erlebe die Zukunft des Wassersports mit Efoils von Surf2Fly. Philipp Mainka aus Grafenrheinfeld führt dich in die Welt des elektrischen Surfens ein.">
-        <meta name="keywords" content="efoil, Surf2Fly, Grafenrheinfeld, Philipp Mainka, elektrisches Surfen, Wassersport, Verleih, Stunden">
-        <meta name="author" content="Surf2Fly efoil Verleih und Schule">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Surf2Fly</title>
-        <style>
-            body {
-                margin: 0;
-                font-family: Arial, sans-serif;
-                background-color: #efefef; /* Neuer Hintergrund */
-                color: black;
-                text-align: center;
-            }
-            header {
-                position: fixed;
-                top: 0;
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                padding: 10px 0;
-                background-color: rgba(255, 255, 255, 0.8);
-                z-index: 10;
-            }
-            .logo {
-                position: absolute;
-                left: 20px;
-                font-size: 24px;
-                font-weight: bold;
-            }
-            nav a {
-                color: black;
-                text-decoration: none;
-                margin: 0 15px;
-                font-size: 20px;
-            }
-            .video-container {
-                position: relative;
-                width: 100%;
-                height: 80vh; /* Höhe des Videos */
-                overflow: hidden;
-                margin-bottom: -10px; /* Reduziert Abstand zum nächsten Container */
-            }
-            .video-container video {
-                position: absolute;
-                top: 0; /* Video an den oberen Rand setzen */
-                left: 0; /* Video an den linken Rand setzen */
-                width: 100%; /* Video auf volle Breite setzen */
-                height: 100%; /* Video auf volle Höhe setzen */
-                object-fit: cover; /* Damit das Video das gesamte Container ausfüllt */
-            }
-            .content {
-                padding: 10px; /* Noch weniger Abstand */
-                margin-top: 0px; /* Minimiert Abstand nach dem Video */
-                font-size: 16px;
-                max-width: 80%; /* 10% weiter nach außen */
-                margin-left: auto;
-                margin-right: auto;
-                text-align: center; /* Textzentrierung */
-            }
-            .button {
-                display: inline-block;
-                padding: 10px 20px;
-                background-color: #006400;
-                color: white;
-                text-decoration: none;
-                font-size: 18px;
-                border-radius: 5px;
-                margin-top: 20px;
-            }
-            .infobox {
-                margin-top: 20px;
-                background-color: #f0f0f0;
-                padding: 10px;
-                border-radius: 5px;
-            }
-            .gallery {
-                display: flex;
-                justify-content: space-around;
-                flex-wrap: wrap;
-                margin-top: 40px;
-            }
-            .gallery img {
-                width: 30%;
-                margin: 10px 0;
-                border-radius: 5px;
-            }
-        </style>
-    </head>
-    <body>
-        <header>
-            <div class="logo">SURF2FLY</div>
-            <nav> <a href="#">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a> <a href="#termin">Termin</a> <a href="#kontakt">Kontakt</a> </nav>
-        </header>
-        <div class="video-container">
-            <video autoplay loop muted>
-                <source src="DJI_0013.mp4" type="video/mp4">
-                Dein Browser unterstützt kein HTML5-Video.
-            </video>
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Erlebe die Zukunft des Wassersports mit Efoils von Surf2Fly. Philipp Mainka aus Grafenrheinfeld führt dich in die Welt des elektrischen Surfens ein.">
+    <meta name="keywords" content="efoil, Surf2Fly, Grafenrheinfeld, Philipp Mainka, elektrisches Surfen, Wassersport, Verleih, Stunden">
+    <meta name="author" content="Surf2Fly efoil Verleih und Schule">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Surf2Fly</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #CCCCCC;
+            color: black;
+            text-align: center;
+        }
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+            background-color: rgba(255, 255, 255, 0.8);
+            z-index: 10;
+        }
+        .logo {
+            position: absolute;
+            left: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        nav a {
+            color: black;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 20px;
+        }
+        .video-container {
+            position: relative;
+            width: 100%;
+            height: 80vh;
+            overflow: hidden;
+            margin-bottom: -10px;
+        }
+        .video-container video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .content {
+            padding: 10px;
+            margin-top: 0px;
+            font-size: 16px;
+            max-width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #595959;
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+        .infobox {
+            margin-top: 20px;
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .gallery {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            margin-top: 40px;
+        }
+        .gallery img {
+            width: 30%;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+        footer {
+            background-color: #ddd;
+            padding: 20px;
+            font-size: 14px;
+            color: #333;
+            text-align: center;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="logo">SURF2FLY</div>
+        <nav>
+            <a href="#termin">Termin</a>
+            <a href="#kontakt">Kontakt</a>
+        </nav>
+    </header>
+
+    <div class="video-container">
+        <video autoplay loop muted>
+            <source src="DJI_0013.mp4" type="video/mp4">
+            Dein Browser unterstützt kein HTML5-Video.
+        </video>
+    </div>
+
+    <div class="content">
+        <h1>Willkommen bei SURF2FLY</h1>
+        <p>Franken meets eSurfing</p>
+        <p>Als regionales Start-Up aus dem unterfränkischen Schweinfurt bieten wir dir, deinen Freunden und/oder deiner Familie das ultimative Wasser- und Surferlebnis auf dem Main. Unsere professionellen Coaches zeigen dir, wie du schon nach wenigen Minuten eigenständig auf dem eFoil stehst und mittels elektronischer Antriebssteuerung über die Wellen gleitest. Also, worauf wartest du – lets eSurf!</p>
+        <div class="infobox">
+            <h3>Was ist ein eFoil und wie funktioniert es?</h3>
+            <p>Das eFoil ist ein elektrisches Surfbrett, das es dir ermöglicht, über das Wasser zu gleiten – ganz ohne Wellen! Es wird durch einen Akku betrieben und der Antrieb wird über ein Fernsteuerungssystem reguliert. Mit etwas Übung kannst du mühelos auf dem Wasser gleiten!</p>
         </div>
-        <div class="content">
-            <h1>Willkommen bei Surf2Fly</h1>
-            <p>Franken meets eSurfing</p>
-            <p>Als regionales Start-Up aus dem unterfränkischen Schweinfurt bieten wir dir, deinen Freunden und/oder deiner Familie das ultimative Wasser- und Surferlebnis auf dem Main. Unsere professionellen Coaches zeigen dir, wie du schon nach wenigen Minuten eigenständig auf dem eFoil stehst und mittels elektronischer Antriebssteuerung über die Wellen gleitest. Also, worauf wartest du – lets eSurf!</p>
-            <div class="infobox">
-                <h3>Was ist ein eFoil und wie funktioniert es?</h3>
-                <p>Das eFoil ist ein elektrisches Surfbrett, das es dir ermöglicht, über das Wasser zu gleiten – ganz ohne Wellen! Es wird durch einen Akku betrieben und der Antrieb wird über ein Fernsteuerungssystem reguliert. Mit etwas Übung kannst du mühelos auf dem Wasser gleiten!</p>
-            </div>
-            <h2>Unser Angebot – Ein Preis für eineinhalb Stunden eSurfing</h2>
-            <h3>Single – die 1 zu 1 Betreuung für dich!</h3>
-            <p>Du möchtest eSurfing mal für Dich ausprobieren? Dann bist du bei uns an der richtigen Stelle. Unsere Coaches zeigen dir erstmal per Trockenübungen an Land, wie du mit dem eFoil umgehst. Anschließend darfst du dann selbst ins Wasser – unsere Coaches geben dir natürlich weiter Tipps! Time Cap: ½ Stunde Theorie und 1 Stunde fahren.</p>
-            <h3>Pair – ihr seid zu zweit!</h3>
-            <p>Du bist mit deiner Partnerin oder deinem Partner unterwegs und ihr habt Lust auf ein bisschen Wasseraction? Ihr erhaltet zunächst eine Einführung zum eFoil an Land. Und dann geht es mit 2 Boards aufs Wasser!</p>
-            <h3>Rent – du bist bereits eSurf-Profi!</h3>
-            <p>Wenn du bereits einen Kurs bei uns hattest und sicher fahren kannst, dann kannst du auch gerne bei uns ein eFoil ausleihen.</p>
-            <h3>Unsere Preise:</h3>
-            <p>Single – 169 €</p>
-            <p>Pair – 299 €</p>
-            <p>Rent – 129 €</p>
-                    </ul>             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true" class="button">Termin buchen</a>
-        </div>
-        <div id="termin" class="content">
-            <h2>Was erwartet mich genau?</h2>
-            <p></p>
-            <p>Du kommst einfach zum vereinbarten Zeitpunkt zu unserem Treffpunkt am Main (Die Bootslipstelle zwischen Grafenrheinfeld und Bergrheinfeld https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9)</p>
-            <p>Unsere Coaches zeigen dir hier erstmal per Trockenübungen an Land, wie du mit dem eFoil umgehst.  
-			Danach gibts noch ein bisschen Theorie, z.B wo du auf dem Main fahren darfst und wo nicht, was es bei Bootsverkehr zu beachten gibt, etc.  
-			Anschließend darfst du dann selbst ins Wasser – unsere Coaches geben dir natürlich weitere Tipps und begleiten dich mit dem Sportboot. Auf dem Wasser bist du dann so lange bis sich der Boardakku dem Ende neigt (je nach Fahrergewicht und Talent 45-60 Minuten). 
- Time Cap: ½ Stunde Theorie und 1 Stunde fahren <p>
-			<h2>Wo muss ich hin?</h2> <a href="https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9" target="_blank" class="button">Standort anzeigen</a>
-			<h2>Was muss ich mitbringen?</h2>
-			<p>- Badeklamotten </p>
-			<p>- Handtuch </p>
-			<p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürliche einen für dich) </p>
-			<p>- Gute Laune :) </p>
-        </div>
-    </body>
+
+        <h2>Unser Angebot – Ein Preis für eineinhalb Stunden eSurfing</h2>
+        <h3>Single – die 1 zu 1 Betreuung für dich!</h3>
+        <p>Du möchtest eSurfing mal für Dich ausprobieren? Dann bist du bei uns an der richtigen Stelle. Unsere Coaches zeigen dir erstmal per Trockenübungen an Land, wie du mit dem eFoil umgehst. Anschließend darfst du dann selbst ins Wasser – unsere Coaches geben dir natürlich weiter Tipps! Time Cap: ½ Stunde Theorie und 1 Stunde fahren.</p>
+        <h3>Pair – ihr seid zu zweit!</h3>
+        <p>Du bist mit deiner Partnerin oder deinem Partner unterwegs und ihr habt Lust auf ein bisschen Wasseraction? Ihr erhaltet zunächst eine Einführung zum eFoil an Land. Und dann geht es mit 2 Boards aufs Wasser!</p>
+        <h3>Rent – du bist bereits eSurf-Profi!</h3>
+        <p>Wenn du bereits einen Kurs bei uns hattest und sicher fahren kannst, dann kannst du auch gerne bei uns ein eFoil ausleihen.</p>
+        <h3>Unsere Preise:</h3>
+        <p>Single – 129 €</p>
+        <p>Pair – 189 €</p>
+        <p>Rent – 89 €</p>
+
+        <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true" class="button">Termin buchen</a>
+    </div>
+
+    <div id="termin" class="content">
+        <h2>Was erwartet mich genau?</h2>
+        <p>Du kommst einfach zum vereinbarten Zeitpunkt zu unserem Treffpunkt am Main (Die Bootslipstelle zwischen Grafenrheinfeld und Bergrheinfeld https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9)</p>
+        <p>Unsere Coaches zeigen dir hier erstmal per Trockenübungen an Land, wie du mit dem eFoil umgehst.  
+        Danach gibts noch ein bisschen Theorie, z.B wo du auf dem Main fahren darfst und wo nicht, was es bei Bootsverkehr zu beachten gibt, etc.  
+        Anschließend darfst du dann selbst ins Wasser – unsere Coaches geben dir natürlich weitere Tipps und begleiten dich mit dem Sportboot. Auf dem Wasser bist du dann so lange bis sich der Boardakku dem Ende neigt (je nach Fahrergewicht und Talent 45–60 Minuten).</p>
+        <p><strong>Time Cap:</strong> ½ Stunde Theorie und 1 Stunde fahren</p>
+
+        <h2>Wo muss ich hin?</h2>
+        <a href="https://maps.app.goo.gl/xN8HqcPdqKRmkYHa9" target="_blank" class="button">Standort anzeigen</a>
+
+        <h2>Was muss ich mitbringen?</h2>
+        <p>- Badeklamotten</p>
+        <p>- Handtuch</p>
+        <p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürlich einen für dich)</p>
+        <p>- Gute Laune :)</p>
+
+        <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
+    </div>
+
+    <footer id="kontakt">
+        <h3>Impressum</h3>
+        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+        Surf2fly GbR<br>
+        Konrad-Wagner-Str. 7<br>
+        97526 Sennfeld</p>
+
+        <p><strong>Kontakt:</strong><br>
+        Telefon: 015679 617921<br>
+        WhatsApp: 015679 617921<br>
+        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+    </footer>
+</body>
 </html>
