--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <header>
         <div class="logo">SURF2FLY</div>
         <nav>
-            <a href="#termin">Termin</a>
+            <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt</a>
         </nav>
     </header>
@@ -118,6 +118,7 @@
         <h1>Willkommen bei SURF2FLY</h1>
         <p>Franken meets eSurfing</p>
         <p>Als regionales Start-Up aus dem unterfränkischen Schweinfurt bieten wir dir, deinen Freunden und/oder deiner Familie das ultimative Wasser- und Surferlebnis auf dem Main. Unsere professionellen Coaches zeigen dir, wie du schon nach wenigen Minuten eigenständig auf dem eFoil stehst und mittels elektronischer Antriebssteuerung über die Wellen gleitest. Also, worauf wartest du – lets eSurf!</p>
+        
         <div class="infobox">
             <h3>Was ist ein eFoil und wie funktioniert es?</h3>
             <p>Das eFoil ist ein elektrisches Surfbrett, das es dir ermöglicht, über das Wasser zu gleiten – ganz ohne Wellen! Es wird durch einen Akku betrieben und der Antrieb wird über ein Fernsteuerungssystem reguliert. Mit etwas Übung kannst du mühelos auf dem Wasser gleiten!</p>
@@ -130,6 +131,7 @@
         <p>Du bist mit deiner Partnerin oder deinem Partner unterwegs und ihr habt Lust auf ein bisschen Wasseraction? Ihr erhaltet zunächst eine Einführung zum eFoil an Land. Und dann geht es mit 2 Boards aufs Wasser!</p>
         <h3>Rent – du bist bereits eSurf-Profi!</h3>
         <p>Wenn du bereits einen Kurs bei uns hattest und sicher fahren kannst, dann kannst du auch gerne bei uns ein eFoil ausleihen.</p>
+
         <h3>Unsere Preise:</h3>
         <p>Single – 129 €</p>
         <p>Pair – 189 €</p>
@@ -154,7 +156,6 @@
         <p>- Handtuch</p>
         <p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürlich einen für dich)</p>
         <p>- Gute Laune :)</p>
-
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
 
