--- a/index.html
+++ b/index.html
@@ -20,21 +20,23 @@
             top: 0;
             width: 100%;
             display: flex;
-            justify-content: center;
-            padding: 10px 0;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 30px;
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 10;
         }
         .logo {
-            position: absolute;
-            left: 20px;
             font-size: 24px;
             font-weight: bold;
+        }
+        nav {
+            display: flex;
+            gap: 20px;
         }
         nav a {
             color: black;
             text-decoration: none;
-            margin: 0 15px;
             font-size: 20px;
         }
         .video-container {
