--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: right;
             padding: 10px 30px;
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 10;
