--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            align-items: right;
+            align-items: justify;
             padding: 10px 30px;
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 10;
@@ -168,7 +168,7 @@
         Konrad-Wagner-Str. 7<br>
         97526 Sennfeld</p>
 
-        <p><strong>Kontakt:</strong><br>
+        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
         Telefon: 015679 617921<br>
         WhatsApp: 015679 617921<br>
         E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
