--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .button {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #595959;
+            background-color: #698B22;
             color: white;
             text-decoration: none;
             font-size: 18px;
@@ -93,7 +93,7 @@
         footer {
             background-color: #ddd;
             padding: 20px;
-            font-size: 14px;
+            font-size: 18px;
             color: #333;
             text-align: center;
             margin-top: 40px;
@@ -102,7 +102,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">SURF2FLY</div>
+        <div class="logo"><source src="surf2fly_logo.jpg" type="picture/jpg">SURF2FLY</div>
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
