--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
             Dein Browser unterstützt kein HTML5-Video.
         </video>
     </div>
-
     <div class="content">
-        <h1>Willkommen bei SURF2FLY</h1>
+        <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
+            <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" style="height: 50px;">
+            <h1 style="margin: 0;">Willkommen bei SURF2FLY</h1>
+    </div>    
         <p>Franken meets eSurfing</p>
         <p>Als regionales Start-Up aus dem unterfränkischen Schweinfurt bieten wir dir, deinen Freunden und/oder deiner Familie das ultimative Wasser- und Surferlebnis auf dem Main. Unsere professionellen Coaches zeigen dir, wie du schon nach wenigen Minuten eigenständig auf dem eFoil stehst und mittels elektronischer Antriebssteuerung über die Wellen gleitest. Also, worauf wartest du – lets eSurf!</p>
         
