--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             color: black;
             text-decoration: none;
             font-size: 20px;
+            .logo-text {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .nav-logo {
+        height: 50px;
+        margin: 0 20px;
+        }
         }
         .video-container {
             position: relative;
@@ -102,8 +111,9 @@
 </head>
 <body>
     <header>
-        <div class="logo"><source src="surf2fly_logo.jpg" type="picture/jpg">SURF2FLY</div>
+        <a href="index.html" class="logo-text">SURF2FLY</a>
         <nav>
+            <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" class="nav-logo">
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
         </nav>
