--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             font-weight: bold;
         }
         .nav-logo {
-        height: 1%;
-        margin: 0 20px;
+        height: 2%;
+        margin: 0 2%;
         }
         }
         .video-container {
