--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
         .nav-logo {
         height: 2%;
-        margin: 0 2%;
+        margin: 0 10px;
         }
         }
         .video-container {
