--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             font-weight: bold;
         }
         .nav-logo {
-        height: 2%;
+        height: 2px;
         margin: 0 10px;
         }
         }
