--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             font-weight: bold;
         }
         .nav-logo {
-        height: 2px;
-        margin: 0 10px;
+        height: 20px; /* oder was dir gefällt */
+        margin-left: 10px;
+        margin-right: 10px;
         }
         }
         .video-container {
@@ -110,7 +111,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo-text">SURF2FLY</a>
+        <a href="/" class="logo-text">SURF2FLY</a>
         <nav>
             <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" class="nav-logo">
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
