--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             z-index: 10;
         }
         .logo {
-            font-size: 24px;
+            font-size: 5px;
             font-weight: bold;
         }
         nav {
@@ -111,10 +111,9 @@
 </head>
 <body>
     <header>
-        <a href="/" class="logo-text">SURF2FLY</a>
-
+        <div class="logo"><source src="surf2fly_logo.jpg" type="picture/jpg">SURF2FLY</div>
+        <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" class="logo">
         <nav>
-            
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
         </nav>
