--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         .logo {
             font-size: 5px;
             font-weight: bold;
+            width: 20px;
+            height: auto;
         }
         nav {
             display: flex;
