--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             z-index: 10;
         }
         .logo {
-            font-size: 5px;
+            font-size: 15px;
             font-weight: bold;
             width: 20px;
             height: auto;
@@ -113,7 +113,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><source src="surf2fly_logo.jpg" type="picture/jpg">SURF2FLY</div>
+        <h1 class="site-name">SURF2FLY</h1>
         <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" class="logo">
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
