logo width auto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .logo {
             font-size: 15px;
             font-weight: bold;
-            width: 20px;
+            width: auto;
             height: auto;
         }
         nav {
