--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         .logo {
             font-size: 15px;
             font-weight: bold;
-            width: auto;
-            height: auto;
+            width: 25px;
+            height: 25px;
         }
         nav {
             display: flex;
