--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         .logo {
             font-size: 15px;
             font-weight: bold;
-            width: 25px;
-            height: 25px;
+            width: 35px;
+            height: 35px;
         }
         nav {
             display: flex;
@@ -113,7 +113,8 @@
 </head>
 <body>
     <header>
-        <h1 class="site-name">SURF2FLY</h1>
+        <div class="logo"><source src="surf2fly_logo.jpg" type="picture/jpg">SURF2FLY</div>
+       
         <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" class="logo">
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
