--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 </head>
 <body>
     <header>
-        <div class="logo"><source src="surf2fly_logo.jpg" type="picture/jpg">SURF2FLY</div>
+        <div class="logo"><source src="surf2fly_logo.png" type="picture/jpg">SURF2FLY</div>
        
-        <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" class="logo">
+        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="logo">
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
@@ -130,7 +130,7 @@
     </div>
     <div class="content">
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
-            <img src="surf2fly_logo.jpg" alt="Surf2Fly Logo" style="height: 50px;">
+            <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="height: 50px;">
             <h1 style="margin: 0;">Willkommen bei SURF2FLY</h1>
     </div>    
         <p>Franken meets eSurfing</p>
