logo weg und in den footer

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 </head>
 <body>
     <header>
-        <div class="logo"><source src="surf2fly_logo.png" type="picture/jpg">SURF2FLY</div>
+        <div class="logo"><source src="surf2fly_logofail.png" type="picture/jpg">SURF2FLY</div>
        
-        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="logo">
+        
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
@@ -130,7 +130,7 @@
     </div>
     <div class="content">
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
-            <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="height: 50px;">
+            <img src="surf2fly_logo_fail.svg" alt="Surf2Fly Logo" style="height: 50px;">
             <h1 style="margin: 0;">Willkommen bei SURF2FLY</h1>
     </div>    
         <p>Franken meets eSurfing</p>
@@ -176,17 +176,37 @@
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
 
-    <footer id="kontakt">
-        <h3>Impressum</h3>
-        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
-        Surf2fly GbR<br>
-        Konrad-Wagner-Str. 7<br>
-        97526 Sennfeld</p>
+<footer id="kontakt">
+    <h3>Impressum</h3>
+    <div style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap;">
+        <div>
+            <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+            Surf2fly GbR<br>
+            Konrad-Wagner-Str. 7<br>
+            97526 Sennfeld</p>
 
-        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
-        Telefon: 015679 617921<br>
-        WhatsApp: 015679 617921<br>
-        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
-    </footer>
+            <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
+            Telefon: 015679 617921<br>
+            WhatsApp: 015679 617921<br>
+            E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+
+            <!-- WhatsApp Button -->
+            <a aria-label="Chat on WhatsApp"
+                href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+                target="_blank">
+                <img alt="Chat on WhatsApp"
+                    src="WhatsAppButtonGreenLarge.svg"
+                    style="height: 80px; margin-top: 10px;" />
+            </a>
+        </div>
+
+        <!-- Logo rechts vom Impressum -->
+        <div style="margin-left: auto;">
+            <img src="surf2fly_logo.svg"
+                alt="Surf2Fly Logo"
+                style="height: 80px;" />
+        </div>
+    </div>
+</footer>
 </body>
 </html>
