logo und button neu hintergrund

--- a/index.html
+++ b/index.html
@@ -176,37 +176,35 @@
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
 
-<footer id="kontakt">
+<footer id="kontakt" style="position: relative; overflow: hidden;">
     <h3>Impressum</h3>
-    <div style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap;">
-        <div>
-            <p><strong>Angaben gemäß § 5 TMG:</strong><br>
-            Surf2fly GbR<br>
-            Konrad-Wagner-Str. 7<br>
-            97526 Sennfeld</p>
+    <div>
+        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+        Surf2fly GbR<br>
+        Konrad-Wagner-Str. 7<br>
+        97526 Sennfeld</p>
 
-            <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
-            Telefon: 015679 617921<br>
-            WhatsApp: 015679 617921<br>
-            E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
-
-            <!-- WhatsApp Button -->
-            <a aria-label="Chat on WhatsApp"
-                href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
-                target="_blank">
-                <img alt="Chat on WhatsApp"
-                    src="WhatsAppButtonGreenLarge.svg"
-                    style="height: 80px; margin-top: 10px;" />
-            </a>
-        </div>
-
-        <!-- Logo rechts vom Impressum -->
-        <div style="margin-left: auto;">
-            <img src="surf2fly_logo.svg"
-                alt="Surf2Fly Logo"
-                style="height: 80px;" />
-        </div>
+        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
+        Telefon: 015679 617921<br>
+        WhatsApp: 015679 617921<br>
+        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
     </div>
+
+    <!-- WhatsApp Button im Hintergrund -->
+    <a aria-label="Chat on WhatsApp"
+        href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+        target="_blank"
+        style="position: absolute; right: 20px; bottom: 20px; z-index: -1;">
+        <img alt="Chat on WhatsApp"
+            src="WhatsAppButtonGreenLarge.svg"
+            style="height: 80px; opacity: 0.3;" />
+    </a>
+
+    <!-- Logo im Hintergrund -->
+    <img src="surf2fly_logo.svg"
+        alt="Surf2Fly Logo"
+        style="position: absolute; right: 20px; bottom: 110px; height: 80px; opacity: 0.2; z-index: -1;" />
 </footer>
+
 </body>
 </html>
