test alles mittig

--- a/index.html
+++ b/index.html
@@ -114,8 +114,6 @@
 <body>
     <header>
         <div class="logo"><source src="surf2fly_logofail.png" type="picture/jpg">SURF2FLY</div>
-       
-        
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
             <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
@@ -130,7 +128,6 @@
     </div>
     <div class="content">
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
-            <img src="surf2fly_logo_fail.svg" alt="Surf2Fly Logo" style="height: 50px;">
             <h1 style="margin: 0;">Willkommen bei SURF2FLY</h1>
     </div>    
         <p>Franken meets eSurfing</p>
@@ -175,8 +172,13 @@
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
+<footer id="kontakt" style="background-color: #ddd; padding: 20px; font-size: 18px; color: #333; text-align: center; position: relative;">
 
-<footer id="kontakt" style="position: relative; overflow: hidden;">
+    <!-- Logo zentriert über dem Impressum -->
+    <div style="margin-bottom: 20px;">
+        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="height: 120px;" />
+    </div>
+
     <h3>Impressum</h3>
     <div>
         <p><strong>Angaben gemäß § 5 TMG:</strong><br>
@@ -190,21 +192,15 @@
         E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
     </div>
 
-    <!-- WhatsApp Button im Hintergrund -->
+    <!-- WhatsApp Button sichtbar unten rechts -->
     <a aria-label="Chat on WhatsApp"
         href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
         target="_blank"
-        style="position: absolute; right: 20px; bottom: 20px; z-index: -1;">
+        style="position: absolute; right: 30px; bottom: 30px;">
         <img alt="Chat on WhatsApp"
             src="WhatsAppButtonGreenLarge.svg"
-            style="height: 80px; opacity: 0.3;" />
+            style="height: 120px;" />
     </a>
-
-    <!-- Logo im Hintergrund -->
-    <img src="surf2fly_logo.svg"
-        alt="Surf2Fly Logo"
-        style="position: absolute; right: 20px; bottom: 110px; height: 80px; opacity: 0.2; z-index: -1;" />
 </footer>
-
 </body>
 </html>
