alles mittig nochmal testen

--- a/index.html
+++ b/index.html
@@ -172,35 +172,38 @@
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
-<footer id="kontakt" style="background-color: #ddd; padding: 20px; font-size: 18px; color: #333; text-align: center; position: relative;">
-
-    <!-- Logo zentriert über dem Impressum -->
-    <div style="margin-bottom: 20px;">
-        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="height: 120px;" />
-    </div>
-
+<!-- Im Footer am Ende deiner Datei -->
+<footer id="kontakt">
+        <!-- Logo mittig -->
+        <div style="margin-center: auto;">
+            <img src="surf2fly_logo.svg"
+                alt="Surf2Fly Logo"
+                style="height: 80px;" />
+        </div>
     <h3>Impressum</h3>
-    <div>
-        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
-        Surf2fly GbR<br>
-        Konrad-Wagner-Str. 7<br>
-        97526 Sennfeld</p>
+    <div style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap;">
+        <div>
+            <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+            Surf2fly GbR<br>
+            Konrad-Wagner-Str. 7<br>
+            97526 Sennfeld</p>
 
-        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
-        Telefon: 015679 617921<br>
-        WhatsApp: 015679 617921<br>
-        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+            <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
+            Telefon: 015679 617921<br>
+            WhatsApp: 015679 617921<br>
+            E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+
+            <!-- WhatsApp Button -->
+            <a aria-label="Chat on WhatsApp"
+                href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+                target="_blank">
+                <img alt="Chat on WhatsApp"
+                    src="WhatsAppButtonGreenLarge.svg"
+                    style="height: 80px; margin-top: 10px;" />
+            </a>
+        </div>
+
     </div>
-
-    <!-- WhatsApp Button sichtbar unten rechts -->
-    <a aria-label="Chat on WhatsApp"
-        href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
-        target="_blank"
-        style="position: absolute; right: 30px; bottom: 30px;">
-        <img alt="Chat on WhatsApp"
-            src="WhatsAppButtonGreenLarge.svg"
-            style="height: 120px;" />
-    </a>
 </footer>
 </body>
 </html>
