whatsapp neu und logo größer

--- a/index.html
+++ b/index.html
@@ -175,11 +175,9 @@
 <!-- Im Footer am Ende deiner Datei -->
 <footer id="kontakt">
         <!-- Logo mittig -->
-        <div style="margin-center: auto;">
             <img src="surf2fly_logo.svg"
                 alt="Surf2Fly Logo"
-                style="height: 80px;" />
-        </div>
+                style="height: 200px;" />
     <h3>Impressum</h3>
     <div style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap;">
         <div>
@@ -193,16 +191,17 @@
             WhatsApp: 015679 617921<br>
             E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
 
-            <!-- WhatsApp Button -->
-            <a aria-label="Chat on WhatsApp"
-                href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
-                target="_blank">
-                <img alt="Chat on WhatsApp"
-                    src="WhatsAppButtonGreenLarge.svg"
-                    style="height: 80px; margin-top: 10px;" />
-            </a>
-        </div>
+<!-- WhatsApp Button -->
+<a aria-label="Chat on WhatsApp"
+    href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+    target="_blank"
+    style="display: block; text-align: center; margin-top: 20px;">
+    <img alt="Chat on WhatsApp"
+        src="WhatsAppButtonGreenLarge.svg"
+        style="height: 80px; max-width: 90vw;" />
+</a>
 
+        </div>
     </div>
 </footer>
 </body>
