align-items: center

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     height: 80px;
     max-width: 90vw;
     margin-top: 10px;
+    align-items: center;
 }
 
 @media (max-width: 600px) {
@@ -214,9 +215,7 @@
             E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
 
 <!-- Logo + WhatsApp -->
-<div class="kontakt-extra">
-    <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="footer-logo" />
-    
+<div class="kontakt-extra"> 
     <a aria-label="Chat on WhatsApp"
         href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
         target="_blank">
