--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
     height: 80px;
     max-width: 90vw;
     margin-top: 10px;
-    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 @media (max-width: 600px) {
