--- a/index.html
+++ b/index.html
@@ -199,36 +199,34 @@
     </div>
 <!-- Im Footer am Ende deiner Datei -->
 <footer id="kontakt">
-        <!-- Logo mittig -->
-            <img src="surf2fly_logo.svg"
-                alt="Surf2Fly Logo"
-                style="height: 200px;" />
+    <!-- Logo mittig -->
+    <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="height: 120px;" class="footer-logo" />
+
     <h3>Impressum</h3>
-    <div style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap;">
-        <div>
-            <p><strong>Angaben gemäß § 5 TMG:</strong><br>
-            Surf2fly GbR<br>
-            Konrad-Wagner-Str. 7<br>
-            97526 Sennfeld</p>
 
-            <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
-            Telefon: 015679 617921<br>
-            WhatsApp: 015679 617921<br>
-            E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+        Surf2fly GbR<br>
+        Konrad-Wagner-Str. 7<br>
+        97526 Sennfeld</p>
 
-<!-- Logo + WhatsApp -->
-<div class="kontakt-extra"> 
-    <a aria-label="Chat on WhatsApp"
-        href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
-        target="_blank">
-        <img alt="Chat on WhatsApp"
-            src="WhatsAppButtonGreenLarge.svg"
-            class="whatsapp-btn" />
-    </a>
-</div>
+        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
+        Telefon: 015679 617921<br>
+        WhatsApp: 015679 617921<br>
+        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+    </div>
 
-        </div>
+    <!-- WhatsApp Button darunter, zentriert -->
+    <div class="kontakt-extra"> 
+        <a aria-label="Chat on WhatsApp"
+            href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+            target="_blank">
+            <img alt="Chat on WhatsApp"
+                src="WhatsAppButtonGreenLarge.svg"
+                class="whatsapp-btn" />
+        </a>
     </div>
 </footer>
+
 </body>
 </html>
