--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ footer {
 
 .footer-logo {
     height: 80px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .whatsapp-btn {
     display: block;
-    height: 80px;
-    max-width: 90vw;
+    height: 70px;
+    max-width: 70vw;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
