--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer {
 }
 
 .footer-logo {
-    height: 80px;
+    height: 150px;
     margin-bottom: 0;
 }
 
@@ -200,9 +200,9 @@ footer {
 <!-- Im Footer am Ende deiner Datei -->
 <footer id="kontakt">
     <!-- Logo mittig -->
-    <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="height: 120px;" class="footer-logo" />
+    <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="footer-logo" />
 
-    <h3>Impressum</h3>
+   <h3 style="margin-top: 0;">Impressum</h3>
 
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
         <p><strong>Angaben gemäß § 5 TMG:</strong><br>
