--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            align-items: justify;
+            align-items: center;
             padding: 10px 30px;
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 10;
@@ -40,15 +40,6 @@
             color: black;
             text-decoration: none;
             font-size: 20px;
-            .logo-text {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .nav-logo {
-        height: 20px; /* oder was dir gefällt */
-        margin-left: 10px;
-        margin-right: 10px;
-        }
         }
         .video-container {
             position: relative;
@@ -101,33 +92,30 @@
             margin: 10px 0;
             border-radius: 5px;
         }
-footer {
-    background-color: #ddd;
-    padding: 20px;
-    font-size: 18px;
-    color: #333;
-    text-align: center;
-    margin-top: 40px;
-}
+        footer {
+            background-color: #ddd;
+            padding: 20px;
+            font-size: 18px;
+            color: #333;
+            text-align: center;
+            margin-top: 40px;
+        }
         .kontakt-extra {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.footer-logo {
-    height: 150px;
-    margin-bottom: 0;
-}
-
-.whatsapp-btn {
-    display: block;
-    height: 70px;
-    max-width: 70vw;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-
-}
+            text-align: center;
+            margin-top: 20px;
+        }
+        .footer-logo {
+            height: 300px; /* Doppelt so groß (vorher 150px) */
+            margin-bottom: 0;
+        }
+        .whatsapp-btn {
+            display: block;
+            height: 70px;
+            max-width: 70vw;
+            margin-top: 10px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
@@ -135,7 +123,7 @@ footer {
         <div class="logo"><source src="surf2fly_logofail.png" type="picture/jpg">SURF2FLY</div>
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
-            <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
+            <a href="#kontakt">Kontakt</a>
         </nav>
     </header>
 
@@ -148,7 +136,7 @@ footer {
     <div class="content">
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
             <h1 style="margin: 0;">Willkommen bei SURF2FLY</h1>
-    </div>    
+        </div>    
         <p>Franken meets eSurfing</p>
         <p>Als regionales Start-Up aus dem unterfränkischen Schweinfurt bieten wir dir, deinen Freunden und/oder deiner Familie das ultimative Wasser- und Surferlebnis auf dem Main. Unsere professionellen Coaches zeigen dir, wie du schon nach wenigen Minuten eigenständig auf dem eFoil stehst und mittels elektronischer Antriebssteuerung über die Wellen gleitest. Also, worauf wartest du – lets eSurf!</p>
         
@@ -191,36 +179,31 @@ footer {
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
-<!-- Im Footer am Ende deiner Datei -->
-<footer id="kontakt">
-    <!-- Logo mittig -->
-    <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="footer-logo" />
 
-   <h3 style="margin-top: 0;">Impressum</h3>
+    <footer id="kontakt">
+        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="footer-logo" />
+        <h3 style="margin-top: 0;">Impressum</h3>
+        <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+            <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+            Surf2fly GbR<br>
+            Konrad-Wagner-Str. 7<br>
+            97526 Sennfeld</p>
 
-    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
-        Surf2fly GbR<br>
-        Konrad-Wagner-Str. 7<br>
-        97526 Sennfeld</p>
+            <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
+            Telefon: 015679 617921<br>
+            WhatsApp: 015679 617921<br>
+            E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+        </div>
 
-        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
-        Telefon: 015679 617921<br>
-        WhatsApp: 015679 617921<br>
-        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
-    </div>
-
-    <!-- WhatsApp Button darunter, zentriert -->
-    <div class="kontakt-extra"> 
-        <a aria-label="Chat on WhatsApp"
-            href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
-            target="_blank">
-            <img alt="Chat on WhatsApp"
-                src="WhatsAppButtonGreenLarge.svg"
-                class="whatsapp-btn" />
-        </a>
-    </div>
-</footer>
-
+        <div class="kontakt-extra"> 
+            <a aria-label="Chat on WhatsApp"
+                href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+                target="_blank">
+                <img alt="Chat on WhatsApp"
+                    src="WhatsAppButtonGreenLarge.svg"
+                    class="whatsapp-btn" />
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
