back before deepseek

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             margin-top: 20px;
         }
         .footer-logo {
-            height: 600px; /* Doppelt so groß (vorher 150px) */
+            height: 300px; /* Doppelt so groß (vorher 150px) */
             margin-bottom: 0;
         }
         .whatsapp-btn {
@@ -181,7 +181,7 @@
     </div>
 
     <footer id="kontakt">
-        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" style="margin-bottom: 0;" class="footer-logo" />
+        <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="footer-logo" />
         <h3 style="margin-top: 0;">Impressum</h3>
         <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
             <p><strong>Angaben gemäß § 5 TMG:</strong><br>
