--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         }
 
         .footer-logo {
-            height: 150px;
+            height: 250px;
             margin-bottom: 0;
         }
 
@@ -162,7 +162,7 @@
         <div class="logo"><source src="surf2fly_logofail.png" type="picture/jpg">SURF2FLY</div>
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
-            <a href="#kontakt">Kontakt</a>
+            <a href="#kontakt">Kontakt &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> 
         </nav>
     </header>
 
