--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
     <div id="termin" class="content">
         <h2>Ihr wollt ein tolles Erlebnis verschenken?</h2>
-        <p>Kein Problem, bestellt für eure Freunde oder Familie einfach einen Gutschein>/>
+        <p>Kein Problem, bestellt für eure Freunde oder Familie einfach einen Gutschein</>
           <a href="Gutschein.html" target="_blank" class="button">Weg zum Gutschein</a>  
 
             
@@ -251,7 +251,7 @@
 
         <div style="margin-top: 30px;">
             <a href="Datenschutz.html" style="color: #333; text-decoration: underline;">Datenschutzerklärung</a>
-            <p style="font-size: 16px;"> "Wir verwenden Cookies – einige sind essenziell, andere helfen uns, die Website zu verbessern. Mit „Akzeptieren“ stimmen Sie der Nutzung aller Cookies zu. Unter [Datenschutz] oder in den [Einstellungen] können Sie Ihre Wahl anpassen." </p>
+            <p style="font-size: 5px;"> "Wir verwenden Cookies – einige sind essenziell, andere helfen uns, die Website zu verbessern. Mit „Akzeptieren“ stimmen Sie der Nutzung aller Cookies zu. Unter [Datenschutz] oder in den [Einstellungen] können Sie Ihre Wahl anpassen." </p>
         </div>
     </footer>
 </body>
