--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
     </header>
 
     <div class="video-container">
-        <video autoplay loop muted>
+        <video autoplay loop muted playsinline preload="auto">
             <source src="DJI_0013.mp4" type="video/mp4">
+            <source src="DJI_0013.webm" type="video/webm"> <!-- Fallback für bessere Kompatibilität -->
             Dein Browser unterstützt kein HTML5-Video.
         </video>
     </div>
@@ -203,7 +204,7 @@
 
     <div id="termin" class="content">
         <h2>Ihr wollt ein tolles Erlebnis verschenken?</h2>
-        <p>Kein Problem, bestellt für eure Freunde oder Familie einfach einen Gutschein</>
+        <p>Kein Problem, bestellt für eure Freunde oder Familie einfach einen Gutschein</p>
           <a href="Gutschein.html" target="_blank" class="button">Weg zum Gutschein</a>  
 
             
