webm war zu klein

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="video-container">
         <video autoplay loop muted playsinline preload="auto">
             <source src="DJI_0013.mp4" type="video/mp4">
-            <source src="DJI_0013.webm" type="video/webm"> <!-- Fallback für bessere Kompatibilität -->
+           <!-- <source src="DJI_0013.webm" type="video/webm"> <!-- Fallback für bessere Kompatibilität -->-->
             Dein Browser unterstützt kein HTML5-Video.
         </video>
     </div>
