--- a/index_development.html
+++ b/index_development.html
@@ -226,8 +226,8 @@
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
         <div class="infobox">
-            <svg class="logo-svg" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
-                <image href="surf2fly_logo.svg" width="50" height="50" align-items: center preserveAspectRatio="xMidYMid meet"/>
+            <svg class="logo-svg" viewBox="20 0 30 30" >
+                <image href="surf2fly_logo.svg" width="30" height="30" align-items: center />
             </svg>
         </div>
   
