--- a/index_development.html
+++ b/index_development.html
@@ -226,7 +226,7 @@
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
         <div class="infobox">
-            <svg class="logo-svg" viewBox="20 0 30 30" >
+            <svg class="logo-svg" >
                 <image href="surf2fly_logo.svg" width="30" height="30" align-items: center />
             </svg>
         </div>
