--- a/index_development.html
+++ b/index_development.html
@@ -227,7 +227,7 @@
     </div>
         <div class="infobox">
             <svg class="logo-svg" >
-                <image href="surf2fly_logo.svg" width="30" height="30" align-items: center />
+                <image href="surf2fly_logo.svg" width="200" align-items: center />
             </svg>
         </div>
   
