--- a/index_development.html
+++ b/index_development.html
@@ -224,6 +224,7 @@
         <p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürlich einen für dich)</p>
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
+        <image href="surf2fly_logo.svg" width="200" align-items: center />
     </div>
         <div class="infobox">
             <svg class="logo-svg" >
