--- a/index_development.html
+++ b/index_development.html
@@ -224,7 +224,12 @@
         <p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürlich einen für dich)</p>
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
-        <image href="surf2fly_logo.svg" width="200" align-items: center />
+            <svg class="logo-svg" >
+                <image href="surf2fly_logo.svg" width="200" align-items: center />
+            </svg>
+        <svg width="100" height="100">
+        <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+        </svg>
     </div>
         <div class="infobox">
             <svg class="logo-svg" >
