--- a/index_development.html
+++ b/index_development.html
@@ -224,18 +224,10 @@
         <p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürlich einen für dich)</p>
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
-            <svg class="logo-svg" >
-                <image href="surf2fly_logo.svg" width="200" align-items: center />
-            </svg>
         <svg width="100" height="100">
-        <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+        <image href="surf2fly_logo.svg" cx="50" cy="50" width="200"  />
         </svg>
     </div>
-        <div class="infobox">
-            <svg class="logo-svg" >
-                <image href="surf2fly_logo.svg" width="200" align-items: center />
-            </svg>
-        </div>
   
     <footer id="kontakt">
         <h3 style="margin-top: 0;">Impressum</h3>
