--- a/index_development.html
+++ b/index_development.html
@@ -225,10 +225,15 @@
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
         <svg width="100" height="100">
-        <image href="surf2fly_logo.svg" cx="50" cy="50" width="200"  />
+        <image href="surf2fly_logo.svg" cx="50" cy="50" width="200"margin: 0; />
         </svg>
     </div>
-  
+        <div class="infobox">
+            <svg class="logo-svg" >
+                <image href="surf2fly_logo.svg" width="200" cx="50" cy="50" margin: 0; align-items: center />
+            </svg>
+        </div>
+
     <footer id="kontakt">
         <h3 style="margin-top: 0;">Impressum</h3>
         <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
