--- a/index_development.html
+++ b/index_development.html
@@ -224,11 +224,11 @@
         <p>- Neoprenanzug (falls du einen eigenen besitzt, ansonsten haben wir natürlich einen für dich)</p>
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
-        <svg width="100" height="100">
+        <svg width="100" height="100" style="margin-bottom: 0;margin:0">
         <image href="surf2fly_logo.svg" cx="50" cy="50" width="200"margin: 0; />
         </svg>
     </div>
-        <div class="infobox">
+        <div class="infobox" style="margin-top:0>
             <svg class="logo-svg" >
                 <image href="surf2fly_logo.svg" width="200" cx="50" cy="50" margin: 0; align-items: center />
             </svg>
