--- a/index_development.html
+++ b/index_development.html
@@ -230,7 +230,7 @@
     </div>
         <div class="infobox" style="margin-top:0>
             <svg class="logo-svg" >
-                <image href="surf2fly_logo.svg" width="200" cx="50" cy="50" margin: 0; align-items: center />
+                <image href="surf2fly_logo.svg" width="200" margin: 0; align-items: center />
             </svg>
         </div>
 
