--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div id="termin" class="content">
         <h2>Ihr wollt ein tolles Erlebnis verschenken?</h2>
         <p>Kein Problem, bestellt für eure Freunde oder Familie einfach einen Gutschein</p>
-          <a href="Gutschein.html" target="_blank" class="button">Weg zum Gutschein</a>  
+          <a href="https://www.paypal.com/ncp/payment/CTBG84TNS4GV6" target="_blank" class="button">Weg zum Gutschein</a>  
 
             
         <h2>Was erwartet mich genau?</h2>
