--- a/test.html
+++ b/test.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>Besucherzähler</title>
+</head>
+<body>
+  <h1>Willkommen auf meiner Website</h1>
+  <p>Sie sind Besucher Nummer:</p>
+  <iframe src="counter.php" style="border:none;"></iframe>
+</body>
+</html>
 
