--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
 
         <div style="margin-top: 30px;">
-            <a href="Datenschutz.html" style="color: #333; text-decoration: underline;">Datenschutzerklärung</a>
+            <a href="Datenschutz.html" style="color: #333; text-decoration: underline;">Datenschutzerklärung</a> <a href="AGB.html" style="color: #333; text-decoration: underline;">AGBs</a>
             <p style="font-size: 5px;"> "Wir verwenden Cookies – einige sind essenziell, andere helfen uns, die Website zu verbessern. Mit „Akzeptieren“ stimmen Sie der Nutzung aller Cookies zu. Unter [Datenschutz] oder in den [Einstellungen] können Sie Ihre Wahl anpassen." </p>
         </div>
     </footer>
