--- a/Impressum.html
+++ b/Impressum.html
@@ -98,21 +98,18 @@
 <body>
     <header>
         <div class="logo-container">
-            <svg class="logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <image href="surf2fly_logo.svg" width="100" height="100" preserveAspectRatio="xMidYMid meet"/>
-            </svg>
             <div class="logo-text">SURF2FLY</div>
         </div>
         <nav>
             <a href="index.html">Startseite</a>
-            <a href="#kontakt">Kontakt</a>
+            <a href="#kontakt">Kontakt</a> &nbsp&nbsp&nbsp
         </nav>
     </header>
 
     <div class="content">
         <h1>
             <svg width="40" height="40" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <image href="surf2fly_logo.svg" width="100" height="100" preserveAspectRatio="xMidYMid meet"/>
+                <image href="surf2fly_logo.svg" width="250" height="250" preserveAspectRatio="xMidYMid meet"/>
             </svg>
             Impressum
         </h1>
