--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -85,21 +85,19 @@
 <body>
     <header>
         <div class="logo-container">
-            <svg class="logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <image href="surf2fly_logo.svg" width="100" height="100" preserveAspectRatio="xMidYMid meet"/>
-            </svg>
+
             <div class="logo-text">SURF2FLY</div>
         </div>
         <nav>
             <a href="index.html">Startseite</a>
-            <a href="#kontakt">Kontakt</a>
+            <a href="#kontakt">Kontakt</a> &nbsp&nbsp&nbsp 
         </nav>
     </header>
 
     <div class="content">
         <h1>
-            <svg width="40" height="40" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <image href="surf2fly_logo.svg" width="100" height="100" preserveAspectRatio="xMidYMid meet"/>
+            <svg width="140" height="140" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <image href="surf2fly_logo.svg" width="300" height="300" preserveAspectRatio="xMidYMid meet"/>
             </svg>
             Datenschutzerklärung
         </h1>
