--- a/AGB.html
+++ b/AGB.html
@@ -96,7 +96,9 @@
     <div class="content">
         <h1>
             <svg width="300" height="200" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
-                <image href="surf2fly_logo.svg" width="900" height="900" preserveAspectRatio="xMidYMid meet"/>
+             <image href="surf2fly_logo.svg" width="900" height="900" preserveAspectRatio="xMidYMid meet "media="(min-width: 768px)"/>
+             <image href="surf2fly_logo.svg" width="250" height="250" preserveAspectRatio="xMidYMid meet" media="(max-width: 767px)">/>
+                
             </svg>
             Allgemeine Geschäftsbedingungen
         </h1>
