logo im intro weiter hoch am pc

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="video-container">
         <video autoplay loop muted playsinline preload="auto "id="responsive-video">
             
-                <source src="Intro_Wasserzeichen.mp4" media="(min-width: 768px)">
+                <source src="Intro_Wasserzeichen_transparent_PC.mp4" media="(min-width: 768px)">
                 <source src="Intro_Wasserzeichen_transparent.mp4" media="(max-width: 767px)">
            <!-- <source src="Intro_Wasserzeichen.mp4" type="video/mp4 "media="(max-width: 767px)"> -->
            <!-- <source src="DJI_0013.webm" type="video/webm"> <!-- Fallback für bessere Kompatibilität -->-->
