schönheit sup verleih

--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
         Sobald der Akku leer ist (circa 1 Stunde bis 1 ½ Stunden - abhängig von Fahrergewicht und Können). Anschließend nehmen wir die Ausrüstung wieder entgegen.</p>
 
         <h2>SUP Verleih</h2>
-        <p>Du willst es auf dem Wasser etwas ruhiger angehen?</p>
-        <p>Dann kannst du bei uns auch SUPs und dazugehörige Ausrüstung leihen!</p>
-        <p>Oder auch nur Ausrüstung für andere Wassersportaktivitäten.</p>
+        <p>Du willst es auf dem Wasser etwas ruhiger angehen?
+        Dann kannst du bei uns auch SUPs und dazugehörige Ausrüstung leihen!
+        Oder auch nur Ausrüstung für andere Wassersportaktivitäten.</p>
 
         <table style="margin: 20px auto; border-collapse: collapse; font-size: 16px; background-color: #f0f0f0; border-radius: 5px; overflow: hidden; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
     <thead>
-        <tr style="background-color: #e0e0e0;">
+        <tr style="background-color: #698B22;">
             <th style="padding: 12px 15px; border: 1px solid #ccc;">&nbsp;</th>
             <th style="padding: 12px 15px; border: 1px solid #ccc;">1 Tag</th>
             <th style="padding: 12px 15px; border: 1px solid #ccc;">1 Wochenende</th>
