--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         Nach einer kurzen Sicherheitseinweisung bekommst du Board und Material und kannst dort direkt ins Wasser und lossurfen. 
         Sobald der Akku leer ist (circa 1 Stunde bis 1 ½ Stunden - abhängig von Fahrergewicht und Können). Anschließend nehmen wir die Ausrüstung wieder entgegen.</p>
 
-        <h2>SUP Verleih</h2>
+        <h2>Vermietung Neoprenanzüge / Stand-UP-Paddleboards</h2>
         <p>Du willst es auf dem Wasser etwas ruhiger angehen?
         Dann kannst du bei uns auch SUPs und dazugehörige Ausrüstung leihen!
         Oder auch nur Ausrüstung für andere Wassersportaktivitäten.</p>
