--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <h2>Vermietung Neoprenanzüge / Stand-UP-Paddleboards</h2>
         <p>Du willst es auf dem Wasser etwas ruhiger angehen?
-        Dann kannst du bei uns auch SUPs und dazugehörige Ausrüstung leihen!
+        Dann kannst du bei uns auch SUPs und dazugehörige Ausrüstung mieten!
         Oder auch nur Ausrüstung für andere Wassersportaktivitäten.</p>
 
         <table style="margin: 20px auto; border-collapse: collapse; font-size: 16px; background-color: #f0f0f0; border-radius: 5px; overflow: hidden; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
